clusters/sno/applications/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  labels:
    app: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      serviceAccountName: adguard
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.79@sha256:aba9e3bf0613be3ba3755e1fc311b126e2c24bec25e18b6483894a88283074f0
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 3000
              name: setup
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
            - name: conf
              mountPath: /opt/adguardhome/conf
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
      volumes:
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
        - name: conf
          persistentVolumeClaim:
            claimName: adguard-conf
