clusters/sno/applications/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  labels:
    app: adguard
  annotations:
    tailscale.com/hostname: adguard
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 3000
      targetPort: setup
      protocol: TCP
      name: setup
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app: adguard
