clusters/sno/applications/adguard/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adguard
spec:
  host: adguard.apps.majora.home.lab
  port:
    targetPort: http
  to:
    kind: Service
    name: adguard
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
